third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16198.disassembled
//**** Cross-compiled for `masm` syntax from `tests/no-v1-comparison/closures/bug_16198.move`

//# publish
// Bytecode version v8
module 0xc0ffee::m
struct Func has copy + drop
  _0: ||||u64 has copy + drop

// Function definition at index 0
fun forty_two(): u64
    ld_u64 42
    ret

// Function definition at index 1
#[persistent] public fun test(l0: u64)
    local l1: u64
    copy_loc l0
    pack_closure __lambda__2__test, 1
    call_closure <||||u64 has drop>
    call_closure <||u64 has drop>
    ld_u64 42
    // @5
    eq
    br_false l0
    call forty_two
    st_loc l1
    copy_loc l1
    // @10
    pack_closure __lambda__4__test, 1
    call_closure <||||u64 has drop>
    call_closure <||u64 has drop>
    ld_u64 42
    eq
    // @15
    br_false l1
    copy_loc l0
    pack_closure __lambda__7__test, 1
    call_closure <||||||u64 has drop>
    call_closure <||||u64 has drop>
    // @20
    call_closure <||u64 has drop>
    ld_u64 42
    eq
    br_false l2
    copy_loc l0
    // @25
    copy_loc l1
    pack_closure __lambda__12__test, 11
    call_closure <||||||||u64 has drop>
    call_closure <||||||u64 has drop>
    call_closure <||||u64 has drop>
    // @30
    call_closure <||u64 has drop>
    ld_u64 84
    eq
    br_false l3
    copy_loc l0
    // @35
    move_loc l1
    pack_closure __lambda__17__test, 11
    call_closure <||||||||u64 has drop>
    call_closure <||||||u64 has drop>
    call_closure <||||u64 has drop>
    // @40
    call_closure <||u64 has drop>
    ld_u64 84
    eq
    br_false l4
    move_loc l0
    // @45
    pack_closure __lambda__19__test, 1
    pack Func
    unpack Func
    call_closure <||||u64 has copy + drop>
    call_closure <||u64>
    // @50
    ld_u64 42
    eq
    br_false l5
    ret
l5: ld_u64 14566554180833181696
    // @55
    abort
l4: ld_u64 14566554180833181696
    abort
l3: ld_u64 14566554180833181696
    abort
    // @60
l2: ld_u64 14566554180833181696
    abort
l1: ld_u64 14566554180833181696
    abort
l0: ld_u64 14566554180833181696
    // @65
    abort

// Function definition at index 2
fun __lambda__1__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 3
fun __lambda__2__test(l0: u64): ||u64 has drop
    move_loc l0
    pack_closure __lambda__1__test, 1
    ret

// Function definition at index 4
fun __lambda__3__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 5
fun __lambda__4__test(l0: u64): ||u64 has drop
    move_loc l0
    pack_closure __lambda__3__test, 1
    ret

// Function definition at index 6
fun __lambda__5__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 7
fun __lambda__6__test(l0: u64): ||u64 has drop
    move_loc l0
    pack_closure __lambda__5__test, 1
    ret

// Function definition at index 8
fun __lambda__7__test(l0: u64): ||||u64 has drop
    move_loc l0
    pack_closure __lambda__6__test, 1
    ret

// Function definition at index 9
fun __lambda__8__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 10
fun __lambda__9__test(l0: u64, l1: u64): u64
    move_loc l1
    move_loc l0
    add
    ret

// Function definition at index 11
fun __lambda__10__test(l0: u64, l1: u64): ||u64 has drop
    move_loc l0
    move_loc l1
    pack_closure __lambda__9__test, 11
    ret

// Function definition at index 12
fun __lambda__11__test(l0: u64, l1: u64): ||||u64 has drop
    move_loc l0
    move_loc l1
    pack_closure __lambda__10__test, 11
    ret

// Function definition at index 13
fun __lambda__12__test(l0: u64, l1: u64): ||||||u64 has drop
    move_loc l0
    pack_closure __lambda__8__test, 1
    call_closure <||u64>
    st_loc l0
    move_loc l1
    // @5
    move_loc l0
    pack_closure __lambda__11__test, 11
    ret

// Function definition at index 14
fun __lambda__13__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 15
fun __lambda__14__test(l0: u64, l1: u64): u64
    move_loc l1
    move_loc l0
    add
    ret

// Function definition at index 16
fun __lambda__15__test(l0: u64, l1: u64): ||u64 has drop
    move_loc l0
    move_loc l1
    pack_closure __lambda__14__test, 11
    ret

// Function definition at index 17
fun __lambda__16__test(l0: u64, l1: u64): ||||u64 has drop
    move_loc l0
    move_loc l1
    pack_closure __lambda__15__test, 11
    ret

// Function definition at index 18
fun __lambda__17__test(l0: u64, l1: u64): ||||||u64 has drop
    move_loc l1
    pack_closure __lambda__13__test, 1
    call_closure <||u64>
    st_loc l1
    move_loc l0
    // @5
    move_loc l1
    pack_closure __lambda__16__test, 11
    ret

// Function definition at index 19
fun __lambda__18__test(l0: u64): u64
    move_loc l0
    ret

// Function definition at index 20
fun __lambda__19__test(l0: u64): ||u64
    move_loc l0
    pack_closure __lambda__18__test, 1
    ret



//# run 0xc0ffee::m::test --args 42